// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package evtsmgrproto;

// Mandatory imports
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/protos/events.proto";

message Empty {
}

message EventList {
  repeated events.Event Events = 1 [(gogoproto.nullable) = false];
}

// events gRPC API
service EventsAPI {
    // any component can use this method to generate an event
    rpc SendEvents (EventList) returns (Empty) {};
}
